# libproxmox

./: .gitmodules  CMakeLists.txt
include/: logging.h  proxmox.h  requests.h
src/: api.c  auth.c  requests.c
